--- a/ShipIt/ShipIt.csproj
+++ b/ShipIt/ShipIt.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="DotNetEnv" Version="1.4.0" />
       <PackageReference Include="log4net" Version="2.0.9" />
+      <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
       <PackageReference Include="Npgsql" Version="4.1.4" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     </ItemGroup>
